# AI-Powered-Tool-Discovery-Agent

./: .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  passwords.txt  secrets.txt  tall git-filter-repo
AI-Research-Agent.git/: config  packed-refs
AI-Research-Agent.git/filter-repo/: commit-map  first-changed-commits  ref-map
AI-Research-Agent.git/info/: refs
AI-Research-Agent.git/objects/info/: commit-graph  packs
AI-Research-Agent.git/objects/pack/: pack-6146d1bbd1b4ddca14915bb85aa3d358be5cb89e.bitmap  pack-6146d1bbd1b4ddca14915bb85aa3d358be5cb89e.idx  pack-6146d1bbd1b4ddca14915bb85aa3d358be5cb89e.rev
advanced-agent/: api.py  debug_google.html  pyproject.toml  requirements.txt  test_google_search.py  test_validation.py
advanced-agent/src/: config.py  fastscraper.py  intent_registry.py  logger.py  models.py  prompts.py  query_expansion.py  search_providers.py  tech_term_map.py  validators.py  workflow.py
react-frontend/: index.html  package-lock.json  package.json  test-toast.html
react-frontend/public/: privacy.html  terms.html
react-frontend/src/: App.css  App.jsx  main.jsx
react-frontend/src/components/: CompanyCard.css  CompanyCard.jsx  Contact.css  Contact.jsx  Features.css  Features.jsx  FloatingThemeToggle.css  FloatingThemeToggle.jsx  Footer.css  Footer.jsx  Hero.css  Hero.jsx  Navbar.css  Navbar.jsx  Privacy.jsx  ResultsSection.css  ResultsSection.jsx  SearchSection.css  SearchSection.jsx  StaticPages.css  Terms.jsx  Toast.css  Toast.jsx  ToastContainer.jsx  useSearch.js
react-frontend/src/hooks/: useSearch.js
(+4 files in other folders)
